Wrapper: Don't translate clips extents' origin

If a bounded recording surface doesn't have its extents .x and .y at the
surface's origin, this code was translating all clips to make up for that.
However, the clip already is in device space.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=41583

Signed-off-by: Uli Schlachter <psychon@znc.in>
Reviewed-by: Chris Wilson <chris@chris-wilson.co.uk>