src/cairo-surface-wrapper.c
@@ -122,10 +122,6 @@ _cairo_surface_wrapper_get_clip (cairo_surface_wrapper_t *wrapper,
     copy = _cairo_clip_copy (clip);
     if (wrapper->has_extents) {
 	copy = _cairo_clip_intersect_rectangle (copy, &wrapper->extents);
-	if (wrapper->extents.x | wrapper->extents.y)
-	    copy = _cairo_clip_translate (copy,
-					  -wrapper->extents.x,
-					  -wrapper->extents.y);
     }
     copy = _cairo_clip_transform (copy, &wrapper->transform);
     if (! _cairo_matrix_is_identity (&wrapper->target->device_transform)) {
